# telemetry

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/actions/install-dependencies/: action.yml
.github/workflows/: atomic-commits.yml  build.yml  check.yml  ci.yml  copr.yaml  cppcheck.yml  make-test.yml  rpm-test.yml
cmake/: build_type.cmake  dependencies.cmake  googletest.cmake
doc/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  README.md  aggregatedFileExample.cpp  basicExample.cpp  contentExample.cpp  holderExample.cpp  utilsExample.cpp
examples/advanced/: CMakeLists.txt  dataCenter.cpp  dataCenter.hpp  main.cpp  server.cpp  server.hpp
examples/simple/: CMakeLists.txt  main.cpp
include/: appFs.hpp  telemetry.hpp
include/telemetry/: aggFile.hpp  aggMethod.hpp  content.hpp  directory.hpp  file.hpp  holder.hpp  node.hpp  symlink.hpp  utility.hpp
pkg/: CMakeLists.txt
pkg/rpm/: CMakeLists.txt  telemetry.spec.in
pkg/tgz/: CMakeLists.txt
src/: CMakeLists.txt
src/appFs/: CMakeLists.txt  appFs.cpp
src/telemetry/: CMakeLists.txt  aggFile.cpp  content.cpp  directory.cpp  file.cpp  holder.cpp  node.cpp  symlink.cpp  utility.cpp
src/telemetry/aggregator/: aggAvg.cpp  aggAvg.hpp  aggCommon.hpp  aggJoin.cpp  aggJoin.hpp  aggMethod.cpp  aggMethodFactory.cpp  aggMethodFactory.hpp  aggMinMax.cpp  aggMinMax.hpp  aggSum.cpp  aggSum.hpp
src/telemetry/aggregator/tests/: testAggAvg.cpp  testAggJoin.cpp  testAggMinMax.cpp  testAggSum.cpp
src/telemetry/tests/: strUtils.hpp  testAggFile.cpp  testContent.cpp  testDirectory.cpp  testFile.cpp  testHolder.cpp  testSymlink.cpp  testUtility.cpp
